# ml_experiment

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: promote_model.yml
cv_results/: metrics.json
models/: 20250401_15-59-39_rf_model.joblib  random_forest_model.pkl  xgboost_model.pkl
notebooks/: EDA.ipynb  Prediction_experiment_validation.ipynb  Prediction_initial_run.ipynb
src/: app.py  data_preparation.py  feature_selection.py  predict.py  train_evaluate.py  utils.py
