[project]
name = "volume-forecast"
version = "0.1.0"
description = ""
authors = [
    {name = "Yury Ivaschenko",email = "yury.ivaschenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "lightgbm (==4.5.0)",
    "dvc (>=3.33.3, <3.59)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
pytest = "^8.3.4"
plotly = "^6.0.0"
nbformat = "^5.10.4"
black = "^25.1.0"
flake8 = "^7.1.1"
isort = "^6.0.0"
flake8-pyproject = "^1.2.3"
dvclive = "^3.0.0"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
